IISCRUM-2835 Fix dropdown clipping issue

--- a/public/sass/iiris_custom_modal.scss
+++ b/public/sass/iiris_custom_modal.scss
@@ -255,3 +255,8 @@ $table-line-color: #cccccc;
         }
     }
 }
+
+.maintenance-row-container .gf-form-select-wrapper select.gf-form-input {
+    text-indent: 0;
+    text-overflow: clip;
+}
